--- a/Views/Templates/Home.html
+++ b/Views/Templates/Home.html
@@ -3,13 +3,11 @@ $if session['user'] != None:
     <div class="container">
         <div class="note-box">
             <form id="note-activity">
-                <label for="comment">Twoja Notatka</label>
-                <textarea name="content" class="form-control" rows="5" id="comment" placeholder="Wstaw notatkę $session['user']['username']"></textarea>
+                <h3>Twoja Notatka</h3>
+                <textarea name="content" class="form-control" rows="5" id="comment"></textarea>
                 <div class="row">
                     <div class="col text-center">
-                        <button id="note-button" style="align-self: center" class="btn btn-info btn-raised waves-effect"
-                            type="submit"><span class="mdi mdi-send"></span>Wyślij
-                    </button>
+                        <button id="insert" style="align-self: center" class="btn btn-info btn-raised waves-effect" type="submit">Wyślij</button>
                      </div>
                 </div>
             </form>
@@ -17,12 +15,16 @@ $if session['user'] != None:
 
     $for note in notes:
         <div class="showall">
-            <div class="header">
-                <div class="avatar">
-                <a href="/profile">$note['user']['username']</a>
-                </div>
-                <div class="content">
-                $note['content']
+            <div class="">
+                <div id="container">
+                    <div class="flex-row">
+                        <br>
+                        <h4><a href="/profile">$note['user']['username']</a></h4>
+                            <div id="purify">
+                                $note['content']
+                                <br>
+                            </div>
+                    </div>
                 </div>
             </div>
         </div>
